--- a/src/app/pages/menu/menu.css
+++ b/src/app/pages/menu/menu.css
@@ -131,3 +131,10 @@ a{
       font-size: 0.8rem;
     }
   }
+
+  .menu-image {
+    object-fit: cover;
+    object-position: center 30%;
+    width: 100%;
+    height: 100%;
+  }
