Clerk auth created, webhook created too, send the user info to the bd pending

--- a/src/app/components/Navbar/Navbar.css
+++ b/src/app/components/Navbar/Navbar.css
@@ -4,6 +4,12 @@
     align-items: center;
     padding: 10px 20px;
     background-color: #000000;
+    width: 100%;
+    min-height: 2rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
 }
 
 .navbar-logo {
