--- a/src/app/components/Button/Button.css
+++ b/src/app/components/Button/Button.css
@@ -1,22 +1,23 @@
 .button-primary {
-    padding: 8px 12px 8px 12px;
+    padding: 20px 14px;
     background-color: var(--primary-color);
     color: var(--text-white);
-    border-radius: 4px;
+    border-radius: 50px;
     font-size: 16px;
     font-weight: 600;
     text-align: center;
     cursor: pointer;
+    width: 200px;
 }
 
 .button-secondary {
-    padding: 8px 12px 8px 12px;
+    padding: 20px 14px;
     background-color: var(--secondary-color);
     color: var(--text-white);
-    border-radius: 4px;
+    border-radius: 50px;
     font-size: 16px;
     font-weight: 600;
     text-align: center;
     cursor: pointer;
+    width: 200px;
 }
-
