--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
   --background: #ffffff;
   --foreground: #474747;
   --primary-color: #2C2F24;
-  --secondary-color: #AD343E;
+  --secondary-color: blue;
   --third-color: #474747;
   --title-primary: #2C2F24;
   --subtitle-secondary: #AD343E;
